--- a/assets/style.css
+++ b/assets/style.css
@@ -89,6 +89,9 @@ body {
 	width: 80%;
 	font-size: 14px;
 }
+#about-me .about-me__introduction {
+	font-size: 16px;
+}
 
 #gallery {
 	/*	min-height: 100vh; */
