--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,10 @@ body {
 	font-family: 'Inter';
 	font-style: normal;
 }
+
+.cursor-pointer {
+	cursor: pointer;
+}
 .top-header {
 	background-color: white;
 	position: sticky;
