--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,5 @@
 body {
 	max-width: 1920px;
-	margin: auto;
 }
 * {
 	font-family: 'Inter';
@@ -10,35 +9,34 @@ body {
 .cursor-pointer {
 	cursor: pointer;
 }
-.top-header {
-	background-color: white;
-	position: sticky;
-	top:0;
-	z-index: 1000;
-	display: flex;
-	justify-content: space-between;
+
+.top-header, #about, #contact {
 	padding-inline: 100px;
-	padding-block: 30px;
-	align-items: center;
 }
 
-.top-header .name {
+.top-header, #services .container, .service {
+	justify-content: space-between;
+}
+
+.top-header {
+	top:0;
+	z-index: 2;
+	padding-block: 30px;
+}
+
+.top-header .name, h2 {
 	font-size: 26px;
 }
 
-.nav ul {
-	display: flex;
-	list-style-type: none;
+.nav ul, #about-me p {
 	font-size: 14px;
-	margin-bottom: 0;
 }
 
 .nav li {
 	padding-inline: 10px;
 }
 
-.nav a {
-	text-decoration: none;
+.nav a, .nav-pills .nav-link {
 	color: #000
 }
 
@@ -46,35 +44,40 @@ body {
 	width: 20px;
 }
 
-#about {
-	display: flex;
-	background-color: #F6D2B8;
-	padding-inline: 100px;
-	padding-block: 100px;
-	position: relative;
+#about, #contact {
+	padding-block: 100px
 }
 
-.picture.left::before {
+#about {
+	background-color: #F6D2B8;
+}
+
+.picture.left::before, .picture.right::before, #services .container::before {
+	bottom: 0;
+}
+
+.picture.left::before, .picture.right::before {
 	content: ' ';
-	background-color: #E5975F;
 	width: 374px;
 	height: 329px;
 	position: absolute;
-	bottom: 0;
-	left: 0;
 	z-index: -1;
+}
+
+.picture.left::before {
+	background-color: #E5975F;
+	left: 0;
+}
+
+.picture, #services .container::before {
+	z-index: 0;
 }
 
 .picture {
 	flex: 1;
 	margin: 0 20px;
-	z-index: 0;
 }
 
-.picture img {
-	width: 100%;
-
-}
 #about-me {
 	flex: 2
 }
@@ -83,42 +86,34 @@ body {
 	margin-bottom: 60px;
 	font-size: 30px;
 }
-.about-me__introduction {
+
+.about-me__introduction, .quote, .quote__author, .quote__text {
 	font-family: 'Spectral';
+}
+
+.about-me__introduction, .quote__author {
 	font-weight: 800;
-	font-style: italic;
+}
+
+.about-me__introduction {
 	width: 60%;
+	margin-bottom: 8px;
+	line-height: 19px;
 }
 #about-me p {
 	width: 80%;
-	font-size: 14px;
 }
 #about-me .about-me__introduction {
 	font-size: 16px;
 }
 
-#gallery {
-	/*	min-height: 100vh; */
-}
 .title{
-	text-align: center;
 	padding-block: 2em;
-}
-.gallery .nav {
-	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
 	background-color: #BEB45A;
 	border-radius:0 ;
-}
-.nav-pills .nav-link {
-	color: #000
-}
-.item-column {
-	position: relative;
-	margin-bottom: 0 !important;
-	padding: 0;
 }
 .item-column::after{
 	content: "";
@@ -127,46 +122,33 @@ body {
 
 }
 .gallery-item {
-	position: absolute;
-	width: 100%;
-	height: 100%;
 	object-fit: cover;
 	padding: .5em;
 }
 .mg-prev, .mg-next {
 	width: 30px;
 	height: 30px;
-	border-radius: 00%;
-	justify-content: center;
-	align-items: center;
-	display: flex;
+	border-radius: 0;
 	font-size: 24px;
 }
 
-.quote {
-	font-family: 'Spectral';
-	font-style: italic;
+.quote, form {
 	width: 70%;
-	margin: auto;
+}
+
+.quote {
 	padding-block: 3em;
 }
 .quote__text {
-	font-family: Spectral;
-	font-style: italic;
-	font-weight: 300;
-	font-size: 32px;
-
+	font-size: 37.36px;
+	line-height: 44.832px;
 }
 .quote__author {
-	font-family: Spectral;
-	font-weight: 800;
 	font-size: 22px;
 }
 
 #services {
-	margin: auto;
 	background-color: #A8D5D8 ;
-	position: relative;
 }
 #services .container::before{
 	content: ' ';
@@ -174,78 +156,46 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 30%;
-	bottom: 0;
 	left: 0;
-	z-index: 0;
 }
 
 #services .container {
-	justify-content: space-between;
-	display: flex;
 	padding : 2em 0;
-
 }
 
 .service {
-	background-color: white;
 	max-width: 390px;
 	width: 30%;
 	height: 337px;
 	padding: 1em;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
 	z-index: 1;
 }
 
 #contact {
-	margin: auto;
 	background-color: #D8D3A8 ;
-	position: relative;
-	padding-inline: 100px;
-	padding-block: 100px;
-}
-
-#contact .container {
-	display: flex;
 }
 .picture.right::before {
-	content: ' ';
 	background-color: #BEB45A;
-	width: 374px;
-	height: 329px;
-	position: absolute;
-	bottom: 0;
 	right: 0;
-	z-index: -1;
 }
 .form-container {
 	flex : 2;
 
 }
-form {
-	display: flex;
-	flex-direction: column;
-	width: 70%;
-	align-items: flex-start;
+
+form input, form textarea {
+	border: solid 1px;
+	margin-bottom: 20px
 }
 
 form input {
-	width: 100%;
-	background-color: transparent;
-	border: solid 1px;
 	height: 2.5em;
-	margin-bottom: 20px;
 }
 
 form textarea {
-	width: 100%;
-	background-color: transparent;
-	border: solid 1px;
 	height: 5em;
 	line-height: 2.5em;
 	font-size: 1.2em;
-	margin-bottom: 20px;
 }
 input[type="submit"] {
 	background-color: #BEB45A;
@@ -255,9 +205,6 @@ input[type="submit"] {
 @media all and (max-width: 1180px) {
 	.picture {
 		flex : 2;
-	}
-	#about, #contact .container {
-		align-items: center;
 	}
 	.about-me__title {
 		margin-top: 0;
@@ -269,61 +216,53 @@ input[type="submit"] {
 }
 
 @media all and (max-width: 1000px) {
-	#about{
+	#about, #services .container, #contact .container {
 		flex-direction: column;
-
 	}
 	.picture {
 		width: 50%;
 	}
-	.picture.left::before {
+
+	.picture.left::before, .service, .picture.right::before {
 		width: 100%;
+	}
+
+	.picture.left::before, .picture.right::before {
 		height: 30%;
 		position: absolute;
+		z-index: -1;
+	}
+
+	.picture.left::before {
 		bottom: auto;
 		top: 0;
 		left: 0;
-		z-index: -1;
 	}
-	.about-me__title{
-		text-align: center;
+
+	.about-me__title, #contact .picture.right {
 		margin-top: 1em;
 	}
-	#services .container {
-		flex-direction: column;
+
+	.about-me__title{
+		text-align: center;
 	}
 	.service {
-		width: 100%;
 		max-width: 100%;
 		height: auto;
-		margin: 2em 0
+		margin: 2em 0;
 	}
 	.service__description{
 		margin-bottom: 1em;
 	}
-
 	#services .container::before{
 		width: 30%;
 		height: 100%;
-		bottom: 0;
-		right: 0;
 		left: auto;
-		z-index: 0;
-	}
-
-	#contact .container {
-		flex-direction: column;
-	}
-	#contact .picture.right {
-		margin-top: 1em;
-	}
-	.picture.right::before {
-		width: 100%;
-		height: 30%;
-		position: absolute;
-		bottom: 0;
 		right: 0;
-		z-index: -1;
+	}
+	
+	.picture.right::before {
+		bottom: 0;
 	}
 }
 
@@ -332,9 +271,13 @@ input[type="submit"] {
 		flex-direction: column;
 		padding-inline: 0;
 	}
-	.top-header .nav, .top-header .nav ul {
+
+	.top-header .nav, .top-header .nav ul, form {
 		width: 100%;
-		padding: 0 0 0 0;
+	}
+
+	.top-header .nav, .top-header .nav ul {
+		padding: 0;
 	}
 	.top-header .nav li {
 		flex: 1;
@@ -344,18 +287,12 @@ input[type="submit"] {
 	.picture.left::before, .picture.right::before {
 		height: 150px;
 	}
-	#services .container {
-		align-items: center;
-	}
 	.service {
 		max-width: 90%;
 	}
 	#about, #contact {
 		padding-inline: 2em;
 		padding-block: 2em;
-	}
-	form {
-		width: 100%;
 	}
 	.picture {
 		width: 80%;
