--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,12 @@ body {
 	cursor: pointer;
 }
 
+.text-indent {
+	display: inline-block;
+	text-indent: 71px;
+	margin-bottom: 1rem;
+}
+
 .top-header, #about, #contact {
 	padding-inline: 100px;
 }
@@ -202,6 +208,11 @@ input[type="submit"] {
 	padding: .5em 1em
 }
 
+.contact-info {
+	margin-top: 50px;
+	font-size: 16px;
+}
+
 @media all and (max-width: 1180px) {
 	.picture {
 		flex : 2;
@@ -255,14 +266,33 @@ input[type="submit"] {
 		margin-bottom: 1em;
 	}
 	#services .container::before{
-		width: 30%;
+		width: 27%;
 		height: 100%;
 		left: auto;
 		right: 0;
 	}
 	
+	#contact {
+		padding-block-end: 1px;
+	}
+
 	.picture.right::before {
 		bottom: 0;
+	}
+
+	.contact-info {
+		text-align: center;
+		margin-top: 50px;
+		font-size: 16px;
+	}
+
+	address {
+		margin-bottom: 5px;
+	}
+
+	.text-indent {
+		text-indent: -10px;
+		margin-bottom: 5px;
 	}
 }
 
