--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,7 @@ body {
 	padding-inline: 10px;
 }
 
-.nav a, .nav-pills .nav-link {
+.nav a, .nav-pills .nav-link, address a, address a:hover, address a:visited {
 	color: #000
 }
 
@@ -286,7 +286,7 @@ input[type="submit"] {
 		font-size: 16px;
 	}
 
-	address {
+	address{
 		margin-bottom: 5px;
 	}
 
