change bg color

--- a/assets/style.css
+++ b/assets/style.css
@@ -118,7 +118,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: rgb(109, 86, 0);
 	border-radius:0 ;
 }
 .item-column::after{
